opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "unreleased"
depends: [
  "ocamlfind" { build }
  "jbuilder" { build & >= "1.0+beta15" }
  "base-bigarray"
  "base-threads"
  "conf-libev"
  "calendar"
  "cohttp" { >= "1.0.0" }
  "conduit"
  "ezjsonm" { >= "0.5.0" }
  "irmin" { >= "1.3" }
  "lwt" { >= "3.0.0" }
  "lwt_ssl"
  "menhir"
  "mtime" { >= "1.0.0" }
  "ocp-ocamlres" { >= "dev" }
  "ocplib-endian"
  "ocplib-json-typed"
  "reactiveData"
  "sodium" { >= "0.3.0" }
  "magic-mime"
  "leveldb" { >= "1.1.2" }
  "kaputt" # { test }
  "bisect_ppx" # { test }
]
