opam-version: "1.2"
name: "tezos-deps"
version: "dev"
maintainer: "Grégoire Henry <gregoire.henry@ocamlpro.com>"
authors: [
  "Arthur Breitman <arthur.breitman@gmail.com>"
  "Benjamin Canou <benjamin@ocamlpro.com>"
  "Pierre Chambart <pierre@ocamlpro.com>"
  "Grégoire Henry <gregoire@ocamlpro.com>"
]
dev-repo: "https://github.com/tezos/tezos.git"
homepage: "https://gihub.com/tezos/tezos"
bug-reports: "https://github.com/tezos/tezos/issues"
depends: [
  "ocamlfind" {build}
  "base-bigarray"
  "base-threads"
  "calendar"
  "cohttp" {>= "0.21" }
  "cmdliner" {< "1.0.0"}
  "config-file"
  "conduit"
  "git"
  "git-unix"
  "ipv6-multicast"
  "irmin-watcher" (* for `irmin.unix` *)
  "irmin" {>= "0.12" & < "1.0" }
  "lwt" {>= "2.7.0" }
  "lwt_ssl"
  "menhir"
  "mtime"
  "ocp-ocamlres" {>= "dev" }
  "ocplib-endian"
  "ocplib-json-typed"
  "ocplib-resto" {>= "dev" }
  "reactiveData"
  "tyxml"
  "js_of_ocaml"
  "sodium" {>= "0.3.0" }
  "magic-mime"
  "kaputt" # { test }
  "bisect_ppx" # { test }
]
