opam-version: "1.2"
name: "tezos-deps"
version: "dev"
maintainer: "Grégoire Henry <gregoire.henry@ocamlpro.com>"
authors: [
  "Arthur Breitman <arthur.breitman@gmail.com>"
  "Benjamin Canou <benjamin@ocamlpro.com>"
  "Pierre Chambart <pierre@ocamlpro.com>"
  "Grégoire Henry <gregoire@ocamlpro.com>"
]
dev-repo: "https://github.com/tezos/tezos.git"
homepage: "https://gihub.com/tezos/tezos"
bug-reports: "https://github.com/tezos/tezos/issues"
depends: [
  "ocamlfind" {build}
  "base-bigarray"
  "base-threads"
  "conf-libev"
  "calendar"
  "cohttp" {>= "0.21" }
  "conduit"
  "ezjsonm" {= "0.4.3" }
  "git"
  "git-unix"
  "ipv6-multicast"
  "irmin-watcher" (* for `irmin.unix` *)
  "irmin" {>= "0.12" & < "1.0" }
  "lwt" {>= "3.0.0" }
  "lwt_ssl"
  "menhir"
  "mtime"
  "ocp-ocamlres" {>= "dev" }
  "ocplib-endian"
  "ocplib-json-typed"
  "ocplib-resto" {>= "dev" }
  "reactiveData"
  "tyxml"
  "js_of_ocaml"
  "sodium" {>= "0.3.0" }
  "magic-mime"
  "leveldb" {>= "1.1.2" }
  "kaputt" # { test }
  "bisect_ppx" # { test }
]
