(executables
 (names main_client main_admin)
 (public_names tezos-client tezos-admin-client)
 (libraries tezos-base
            tezos-rpc-http
            tezos-shell-services
            tezos-client-base
            tezos-client-commands
            tezos-client-genesis
            tezos-client-demo
            tezos-client-alpha
            tezos-stdlib-unix
            tezos-client-base-unix
            tezos-client-alpha-commands.registration
            tezos-baking-alpha-commands.registration
            tezos-signer-backends)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_rpc_http
                    -open Tezos_stdlib_unix
                    -open Tezos_shell_services
                    -open Tezos_client_base
                    -open Tezos_client_commands
                    -open Tezos_client_base_unix
                    -linkall)))

(install
 (section bin)
 (files (tezos-init-sandboxed-client.sh as tezos-init-sandboxed-client.sh)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
