opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "tezos-base"
  "tezos-client-base"
  "tezos-client-genesis"
  "tezos-client-demo"
  "tezos-client-alpha"
  "tezos-client-alpha-commands"
  "tezos-baking-alpha"
  "tezos-baking-alpha-commands"
  "tezos-client-base-unix"
  "tezos-signer-backends"
  "tezos-node" { with-test }
  "tezos-protocol-compiler" { with-test }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "Tezos: `tezos-client` binary"