opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.0.1" }
  "tezos-base"
  "tezos-client-base-unix"
  "tezos-client-base"
  "tezos-client-commands"
  "tezos-client-demo"
  "tezos-client-000-Ps9mPmXa"
  "tezos-client-001-PtCJ7pwo"
  "tezos-client-002-PsYLVpVv"
  "tezos-client-003-PsddFKi3"
  "tezos-client-004-Pt24m4xi"
  "tezos-client-001-PtCJ7pwo-commands"
  "tezos-client-002-PsYLVpVv-commands"
  "tezos-client-003-PsddFKi3-commands"
  "tezos-baking-003-PsddFKi3-commands"
  "tezos-client-004-Pt24m4xi-commands"
  "tezos-baking-004-Pt24m4xi-commands"
  "tezos-signer-backends"
  "tezos-node" { with-test }
  "tezos-protocol-compiler" { with-test }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "Tezos: `tezos-client` binary"
