opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & = "1.0.1" }
  "tezos-base"
  "tezos-rpc-http"
  "tezos-p2p"
  "tezos-shell"
  "tezos-protocol-updater"
  "tezos-embedded-protocol-demo"
  "tezos-embedded-protocol-000-Ps9mPmXa"
  "tezos-embedded-protocol-003-PsddFKi3"
  "cmdliner"
  "tls"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
