opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "tezos-base"
  "tezos-rpc-http"
  "tezos-p2p"
  "tezos-shell"
  "tezos-protocol-updater"
  "tezos-embedded-protocol-genesis"
  "tezos-embedded-protocol-demo"
  "tezos-embedded-protocol-alpha"
  "cmdliner"
  "tls"
  "cstruct" { < "3.4.0" } ## Because "tls" depends on a version of "nocrypto"
                          ## that is not compatible with recent "cstruct"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "Tezos: `tezos-node` binary"