opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "unreleased"
depends: [
  "ocamlfind" { build }
  "jbuilder" { build & = "1.0+beta19.1" }
  "tezos-base"
  "tezos-client-base"
  "tezos-client-genesis"
  "tezos-client-alpha"
  "tezos-client-alpha-commands"
  "tezos-baking-alpha"
  "tezos-baking-alpha-commands"
  "tezos-client-base-unix"
  "tezos-node" { test }
]
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
