opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "unreleased"
depends: [
  "ocamlfind" { build }
  "jbuilder" { build & = "1.0+beta19" }
  "tezos-stdlib"
  "tezos-crypto"
  "tezos-data-encoding"
  "tezos-error-monad"
  "tezos-micheline"
  "tezos-rpc"
  "calendar"
  "ezjsonm" { >= "0.5.0" }
  "ipaddr"
  "mtime" { >= "1.0.0" }
  "re" { >= "1.7.2" }
]
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
