opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "tezos-stdlib"
  "tezos-crypto"
  "tezos-data-encoding"
  "tezos-error-monad"
  "tezos-event-logging"
  "tezos-micheline"
  "tezos-rpc"
  "ptime" { >= "0.8.4" }
  "ezjsonm" { >= "0.5.0" }
  "ipaddr" { >= "3.0.0" }
  "mtime" { >= "1.0.0" }
  "re" { >= "1.7.2" }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "Tezos: meta-package and pervasive type definitions for Tezos"
