(library
 (name tezos_client_base_unix)
 (public_name tezos-client-base-unix)
 (libraries tezos-base
            tezos-client-base
            tezos-client-commands
            tezos-stdlib-unix
            tezos-rpc-http
            tezos-signer-backends
            tezos-shell-services)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_rpc_http
                   -open Tezos_shell_services
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base
                   -open Tezos_client_commands
                   -linkall)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
