(library
 (name tezos_client_commands)
 (public_name tezos-client-commands)
 (libraries tezos-base
            tezos-client-base
            tezos-rpc
            tezos-shell-services
            tezos-stdlib-unix
            tezos-signer-backends)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_rpc
                   -open Tezos_client_base
                   -open Tezos_shell_services)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
