(library
 (name tezos_crypto)
 (public_name tezos-crypto)
 (flags (:standard -safe-string
                   -open Tezos_stdlib
                   -open Tezos_data_encoding
                   -open Tezos_error_monad
                   -open Tezos_rpc
                   -open Tezos_clic))
 (libraries tezos-stdlib
            tezos-data-encoding
            tezos-error-monad
            tezos-rpc
            tezos-clic
            lwt
            blake2
            hacl
            secp256k1
            uecc
            zarith))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
