opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "unreleased"
depends: [
  "ocamlfind" { build }
  "jbuilder" { build & = "1.0+beta19.1" }
  "tezos-stdlib"
  "tezos-data-encoding"
  "tezos-error-monad"
  "tezos-rpc"
  "tezos-clic"
  "lwt"
  "nocrypto"
  "blake2"
  "hacl"
  "zarith"
  "secp256k1"
  "alcotest" { test & >= "0.8.3" }
]
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
