opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "tezos-stdlib"
  "tezos-data-encoding"
  "tezos-error-monad"
  "tezos-rpc"
  "tezos-clic"
  "lwt"
  "blake2"
  "hacl"
  "zarith"
  "secp256k1"
  "uecc"
  "alcotest" { with-test & >= "0.8.3" }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "Tezos: library with all the cryptographic primitives used by Tezos"