(library
 (name tezos_data_encoding)
 (public_name tezos-data-encoding)
 (libraries tezos-stdlib
            ocplib-json-typed
            ocplib-json-typed-bson
            zarith
            ezjsonm)
 (flags (:standard -w -9+27-30-32-40@8
                   -safe-string
                   -open Tezos_stdlib)))

(alias
 (name runtest_indent)
 (deps (glob_files *.ml{,i}))
 (action (run bash %{libexec:tezos-stdlib:test-ocp-indent.sh} %{deps})))
