opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "unreleased"
depends: [
  "ocamlfind" { build }
  "jbuilder" { build & = "1.0+beta18" }
  "tezos-stdlib"
  "ezjsonm"
  "js_of_ocaml" # for ocplib-json-typed.bson
  "ocplib-json-typed"
  "ocplib-endian"
  "alcotest" { test }
]
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
