opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "tezos-stdlib"
  "ezjsonm"
  "ocplib-json-typed"
  "ocplib-json-typed-bson"
  "ocplib-endian"
  "alcotest" { with-test }
  "crowbar" { with-test }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "Tezos: library of auto-documented JSON-and-binary encoding combinators"
