opam-version: "2.0"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.0.1" }
  "tezos-stdlib"
  "tezos-data-encoding"
  "tezos-error-monad"
  "lwt"
]
build: [[ "dune" "build" "-p" name "-j" jobs ]]
synopsis: "Tezos event logging library"
