opam-version: "1.2"
version: "dev"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "https://gitlab.com/tezos/tezos.git"
license: "unreleased"
depends: [
  "ocamlfind" { build }
  "jbuilder" { build & >= "1.0+beta15" }
  "tezos-base"
  "tezos-storage"
  "tezos-node-services"
  "tezos-p2p-services"
  "tezos-p2p"
  "tezos-node-updater"
]
build: [
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
